--- a/archives/toutiao-search/2023-11-29.md
+++ b/archives/toutiao-search/2023-11-29.md
@@ -1,56 +1,73 @@
 # 2023-11-29
 
-共 347 条
+共 358 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Nov 29 2023 22:00:38 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Nov 29 2023 23:00:50 GMT+0800 (China Standard Time) -->
+1. [拼多多市值超越阿里巴巴](https://so.toutiao.com/search?keyword=拼多多市值超越阿里巴巴)
 1. [武大130周年雷军捐13亿](https://so.toutiao.com/search?keyword=武大130周年雷军捐13亿)
-1. [马云内网回应拼多多市值逼近阿里](https://so.toutiao.com/search?keyword=马云内网回应拼多多市值逼近阿里)
 1. [多地构建“15分钟医疗圈”](https://so.toutiao.com/search?keyword=多地构建“15分钟医疗圈”)
 1. [陈东升雷军任中国光谷全球首席顾问](https://so.toutiao.com/search?keyword=陈东升雷军任中国光谷全球首席顾问)
-1. [鹅腿阿姨发视频哽咽：压力太大了](https://so.toutiao.com/search?keyword=鹅腿阿姨发视频哽咽：压力太大了)
-1. [小米Redmi K70 Pro手机发布](https://so.toutiao.com/search?keyword=小米Redmi+K70 Pro手机发布)
 1. [雷军发文：捐款武大是“还愿之旅”](https://so.toutiao.com/search?keyword=雷军发文：捐款武大是“还愿之旅”)
-1. [河南信阳一学生课上猝死 当地回应](https://so.toutiao.com/search?keyword=河南信阳一学生课上猝死+当地回应)
-1. [总感冒是新冠导致免疫缺陷？专家回应](https://so.toutiao.com/search?keyword=总感冒是新冠导致免疫缺陷？专家回应)
-1. [华为校招高颜值HR出圈 你觉得帅吗](https://so.toutiao.com/search?keyword=华为校招高颜值HR出圈+你觉得帅吗)
-1. [辽宁一小学全班罢课？教育局回应](https://so.toutiao.com/search?keyword=辽宁一小学全班罢课？教育局回应)
-1. [市民买房烂尾被诉 法院：贷款不用还](https://so.toutiao.com/search?keyword=市民买房烂尾被诉+法院：贷款不用还)
-1. [初中生体育课晕倒离世 教育局回应](https://so.toutiao.com/search?keyword=初中生体育课晕倒离世+教育局回应)
-1. [4岁男童被父亲扯衣领提起窒息身亡](https://so.toutiao.com/search?keyword=4岁男童被父亲扯衣领提起窒息身亡)
+1. [导致胃癌的6个高危因素](https://so.toutiao.com/search?keyword=导致胃癌的6个高危因素)
 1. [以要摧毁哈马斯 马斯克：别无选择](https://so.toutiao.com/search?keyword=以要摧毁哈马斯+马斯克：别无选择)
-1. [叶卡捷琳娜·敦佐娃称要竞选俄总统](https://so.toutiao.com/search?keyword=叶卡捷琳娜·敦佐娃称要竞选俄总统)
-1. [浙江队高层：球队会全力做准备](https://so.toutiao.com/search?keyword=浙江队高层：球队会全力做准备)
-1. [曝网红麦小登成功诞下宝宝](https://so.toutiao.com/search?keyword=曝网红麦小登成功诞下宝宝)
+1. [易中天为母校武大“捐诗”](https://so.toutiao.com/search?keyword=易中天为母校武大“捐诗”)
+1. [总感冒是新冠导致免疫缺陷？专家回应](https://so.toutiao.com/search?keyword=总感冒是新冠导致免疫缺陷？专家回应)
+1. [美据称回收至少9艘非人类制造飞船](https://so.toutiao.com/search?keyword=美据称回收至少9艘非人类制造飞船)
 1. [李连杰称已和太太交代后事](https://so.toutiao.com/search?keyword=李连杰称已和太太交代后事)
+1. [鹅腿阿姨发视频哽咽：压力太大了](https://so.toutiao.com/search?keyword=鹅腿阿姨发视频哽咽：压力太大了)
+1. [辽宁一小学全班罢课？教育局回应](https://so.toutiao.com/search?keyword=辽宁一小学全班罢课？教育局回应)
+1. [河南信阳一学生课上猝死 当地回应](https://so.toutiao.com/search?keyword=河南信阳一学生课上猝死+当地回应)
+1. [媒体评“鹅腿阿姨”走红](https://so.toutiao.com/search?keyword=媒体评“鹅腿阿姨”走红)
+1. [献血事件女子父亲：百万包机系借款](https://so.toutiao.com/search?keyword=献血事件女子父亲：百万包机系借款)
+1. [华为校招高颜值HR出圈 你觉得帅吗](https://so.toutiao.com/search?keyword=华为校招高颜值HR出圈+你觉得帅吗)
+1. [全班23人请病假仅3萌娃坚强上课](https://so.toutiao.com/search?keyword=全班23人请病假仅3萌娃坚强上课)
+1. [马云内网回应拼多多市值逼近阿里](https://so.toutiao.com/search?keyword=马云内网回应拼多多市值逼近阿里)
+1. [浦项铁人2-0河内迎小组赛五连胜](https://so.toutiao.com/search?keyword=浦项铁人2-0河内迎小组赛五连胜)
 1. [媒体：“科目三”遭遇尴尬并不意外](https://so.toutiao.com/search?keyword=媒体：“科目三”遭遇尴尬并不意外)
-1. [滴滴再次致歉 公布App崩溃原因](https://so.toutiao.com/search?keyword=滴滴再次致歉+公布App崩溃原因)
+1. [4岁男童被父亲扯衣领提起窒息身亡](https://so.toutiao.com/search?keyword=4岁男童被父亲扯衣领提起窒息身亡)
+1. [市民买房烂尾被诉 法院：贷款不用还](https://so.toutiao.com/search?keyword=市民买房烂尾被诉+法院：贷款不用还)
+1. [教育局回应全班罢课：取消调班计划](https://so.toutiao.com/search?keyword=教育局回应全班罢课：取消调班计划)
+1. [男子患肾病吃半个月桔子查出尿毒症](https://so.toutiao.com/search?keyword=男子患肾病吃半个月桔子查出尿毒症)
+1. [唐国强回应《开国将帅》票房惨淡](https://so.toutiao.com/search?keyword=唐国强回应《开国将帅》票房惨淡)
+1. [普京认为俄已恢复全球超级大国地位](https://so.toutiao.com/search?keyword=普京认为俄已恢复全球超级大国地位)
+1. [王健林如何渡过万达这一劫](https://so.toutiao.com/search?keyword=王健林如何渡过万达这一劫)
 1. [房东将二居室改成七居室出租](https://so.toutiao.com/search?keyword=房东将二居室改成七居室出租)
-1. [大众汽车CEO称品牌不再具有竞争力](https://so.toutiao.com/search?keyword=大众汽车CEO称品牌不再具有竞争力)
+1. [《潜行》阵容：3个影帝1个影后](https://so.toutiao.com/search?keyword=《潜行》阵容：3个影帝1个影后)
 1. [招生办女主任出轨校长？女方回应](https://so.toutiao.com/search?keyword=招生办女主任出轨校长？女方回应)
 1. [海底捞回应男服务员跳舞被指低俗](https://so.toutiao.com/search?keyword=海底捞回应男服务员跳舞被指低俗)
-1. [血站回应网传公务员集体为女子献血](https://so.toutiao.com/search?keyword=血站回应网传公务员集体为女子献血)
-1. [王健林如何渡过万达这一劫](https://so.toutiao.com/search?keyword=王健林如何渡过万达这一劫)
-1. [男子患肾病吃半个月桔子查出尿毒症](https://so.toutiao.com/search?keyword=男子患肾病吃半个月桔子查出尿毒症)
+1. [机器人准备进电梯被两男子踹倒](https://so.toutiao.com/search?keyword=机器人准备进电梯被两男子踹倒)
+1. [初中生体育课晕倒离世 教育局回应](https://so.toutiao.com/search?keyword=初中生体育课晕倒离世+教育局回应)
+1. [滴滴再次致歉 公布App崩溃原因](https://so.toutiao.com/search?keyword=滴滴再次致歉+公布App崩溃原因)
 1. [女子称被公职人员殴打流产 官方回应](https://so.toutiao.com/search?keyword=女子称被公职人员殴打流产+官方回应)
+1. [曝网红麦小登成功诞下宝宝](https://so.toutiao.com/search?keyword=曝网红麦小登成功诞下宝宝)
+1. [媒体：炫耀动员公务员献血让人如何理性](https://so.toutiao.com/search?keyword=媒体：炫耀动员公务员献血让人如何理性)
+1. [警方扫黄前台通风报信：444全员开跑](https://so.toutiao.com/search?keyword=警方扫黄前台通风报信：444全员开跑)
+1. [浙江队高层：球队会全力做准备](https://so.toutiao.com/search?keyword=浙江队高层：球队会全力做准备)
+1. [神十六回家前拍下空间站首张全身照](https://so.toutiao.com/search?keyword=神十六回家前拍下空间站首张全身照)
+1. [男子将甲醇掺入白酒致4死获刑3年半](https://so.toutiao.com/search?keyword=男子将甲醇掺入白酒致4死获刑3年半)
+1. [湖南石门通报公职人员打人事件](https://so.toutiao.com/search?keyword=湖南石门通报公职人员打人事件)
+1. [副县级领导干部刚提拔即被查](https://so.toutiao.com/search?keyword=副县级领导干部刚提拔即被查)
+1. [国产全新宝马X3或将加长](https://so.toutiao.com/search?keyword=国产全新宝马X3或将加长)
+1. [日媒：美军鱼鹰运输机屡发严重事故](https://so.toutiao.com/search?keyword=日媒：美军鱼鹰运输机屡发严重事故)
+1. [国内油价或出现五连跌](https://so.toutiao.com/search?keyword=国内油价或出现五连跌)
+1. [马来西亚女星拍戏时猝死 年仅37岁](https://so.toutiao.com/search?keyword=马来西亚女星拍戏时猝死+年仅37岁)
+1. [曝华为新汽车公司估值高达2500亿元](https://so.toutiao.com/search?keyword=曝华为新汽车公司估值高达2500亿元)
+1. [26名中国人在泰国赌场被捕](https://so.toutiao.com/search?keyword=26名中国人在泰国赌场被捕)
+1. [小米Redmi K70 Pro手机发布](https://so.toutiao.com/search?keyword=小米Redmi+K70 Pro手机发布)
+1. [叶卡捷琳娜·敦佐娃称要竞选俄总统](https://so.toutiao.com/search?keyword=叶卡捷琳娜·敦佐娃称要竞选俄总统)
+1. [大众汽车CEO称品牌不再具有竞争力](https://so.toutiao.com/search?keyword=大众汽车CEO称品牌不再具有竞争力)
+1. [血站回应网传公务员集体为女子献血](https://so.toutiao.com/search?keyword=血站回应网传公务员集体为女子献血)
 1. [专家称若持续3000点机构或坐吃山空](https://so.toutiao.com/search?keyword=专家称若持续3000点机构或坐吃山空)
 1. [卢伟冰回顾Redmi的发展历程](https://so.toutiao.com/search?keyword=卢伟冰回顾Redmi的发展历程)
-1. [湖南石门通报公职人员打人事件](https://so.toutiao.com/search?keyword=湖南石门通报公职人员打人事件)
 1. [传华为与北汽将在明年推出新车型](https://so.toutiao.com/search?keyword=传华为与北汽将在明年推出新车型)
-1. [美据称回收至少9艘非人类制造飞船](https://so.toutiao.com/search?keyword=美据称回收至少9艘非人类制造飞船)
-1. [26名中国人在泰国赌场被捕](https://so.toutiao.com/search?keyword=26名中国人在泰国赌场被捕)
 1. [刘非任云南省委组织部部长](https://so.toutiao.com/search?keyword=刘非任云南省委组织部部长)
 1. [地球收到1600万公里外的激光数据](https://so.toutiao.com/search?keyword=地球收到1600万公里外的激光数据)
-1. [男子将甲醇掺入白酒致4死获刑3年半](https://so.toutiao.com/search?keyword=男子将甲醇掺入白酒致4死获刑3年半)
 1. [东北小吃“烤冰溜子”在长沙火了](https://so.toutiao.com/search?keyword=东北小吃“烤冰溜子”在长沙火了)
 1. [美国将全面禁用中国制造电池？谣言](https://so.toutiao.com/search?keyword=美国将全面禁用中国制造电池？谣言)
-1. [全班23人请病假仅3萌娃坚强上课](https://so.toutiao.com/search?keyword=全班23人请病假仅3萌娃坚强上课)
-1. [媒体：炫耀动员公务员献血让人如何理性](https://so.toutiao.com/search?keyword=媒体：炫耀动员公务员献血让人如何理性)
 1. [食品公司丢弃60余公斤辣椒面被罚5千](https://so.toutiao.com/search?keyword=食品公司丢弃60余公斤辣椒面被罚5千)
 1. [蔚来换电模式与吉利完成联姻](https://so.toutiao.com/search?keyword=蔚来换电模式与吉利完成联姻)
-1. [普京认为俄已恢复全球超级大国地位](https://so.toutiao.com/search?keyword=普京认为俄已恢复全球超级大国地位)
 1. [“鹅腿阿姨”主打的是人间烟火](https://so.toutiao.com/search?keyword=“鹅腿阿姨”主打的是人间烟火)
-1. [马来西亚女星拍戏时猝死 年仅37岁](https://so.toutiao.com/search?keyword=马来西亚女星拍戏时猝死+年仅37岁)
 1. [世青赛团体赛国乒3冠1亚](https://so.toutiao.com/search?keyword=世青赛团体赛国乒3冠1亚)
 1. [四国外长准备抵制欧安组织会议](https://so.toutiao.com/search?keyword=四国外长准备抵制欧安组织会议)
 1. [曝以方考虑进一步交换被扣押人员](https://so.toutiao.com/search?keyword=曝以方考虑进一步交换被扣押人员)
@@ -60,7 +77,6 @@
 1. [中国恒大回应被恒大物业提起诉讼](https://so.toutiao.com/search?keyword=中国恒大回应被恒大物业提起诉讼)
 1. [专业的声带没有年龄差](https://so.toutiao.com/search?keyword=专业的声带没有年龄差)
 1. [邓亚萍：冷静看待运动员网红化](https://so.toutiao.com/search?keyword=邓亚萍：冷静看待运动员网红化)
-1. [教育局回应全班罢课：取消调班计划](https://so.toutiao.com/search?keyword=教育局回应全班罢课：取消调班计划)
 1. [以获释人质：开始伙食不错后来挨饿](https://so.toutiao.com/search?keyword=以获释人质：开始伙食不错后来挨饿)
 1. [张广军任华中科技大学党委书记](https://so.toutiao.com/search?keyword=张广军任华中科技大学党委书记)
 1. [大V：为何社会经济观念转变这么多](https://so.toutiao.com/search?keyword=大V：为何社会经济观念转变这么多)
@@ -69,12 +85,10 @@
 1. [媒体揭秘：印度成美国人的缅北](https://so.toutiao.com/search?keyword=媒体揭秘：印度成美国人的缅北)
 1. [曝哈马斯愿意将停火协议再延长4天](https://so.toutiao.com/search?keyword=曝哈马斯愿意将停火协议再延长4天)
 1. [患儿挤爆广州儿科门急诊？记者走访](https://so.toutiao.com/search?keyword=患儿挤爆广州儿科门急诊？记者走访)
-1. [机器人准备进电梯被两男子踹倒](https://so.toutiao.com/search?keyword=机器人准备进电梯被两男子踹倒)
 1. [曝哈马斯袭击时以情报部队没上班](https://so.toutiao.com/search?keyword=曝哈马斯袭击时以情报部队没上班)
 1. [汽车经销商致信拜登：请尊重市场](https://so.toutiao.com/search?keyword=汽车经销商致信拜登：请尊重市场)
 1. [巴菲特的“黄金搭档”芒格留下哪些传奇](https://so.toutiao.com/search?keyword=巴菲特的“黄金搭档”芒格留下哪些传奇)
 1. [侯友宜：支持厦金大桥建设](https://so.toutiao.com/search?keyword=侯友宜：支持厦金大桥建设)
-1. [媒体评“鹅腿阿姨”走红](https://so.toutiao.com/search?keyword=媒体评“鹅腿阿姨”走红)
 1. [网红小涛在非洲遇害 其亲友发声](https://so.toutiao.com/search?keyword=网红小涛在非洲遇害+其亲友发声)
 1. [雷军在武大校庆致辞全文](https://so.toutiao.com/search?keyword=雷军在武大校庆致辞全文)
 1. [中联部部长：澳方应谨慎对待东海局势](https://so.toutiao.com/search?keyword=中联部部长：澳方应谨慎对待东海局势)
@@ -86,7 +100,6 @@
 1. [乌称不会参加欧安部长级理事会会议](https://so.toutiao.com/search?keyword=乌称不会参加欧安部长级理事会会议)
 1. [俄罗斯军费增加70%](https://so.toutiao.com/search?keyword=俄罗斯军费增加70%)
 1. [在韩沉没货轮10天前在中国港口失踪](https://so.toutiao.com/search?keyword=在韩沉没货轮10天前在中国港口失踪)
-1. [警方扫黄前台通风报信：444全员开跑](https://so.toutiao.com/search?keyword=警方扫黄前台通风报信：444全员开跑)
 1. [侯友宜赵少康猛攻绿营“台独”路线](https://so.toutiao.com/search?keyword=侯友宜赵少康猛攻绿营“台独”路线)
 1. [流感出现混合感染 呼吸科专家提醒](https://so.toutiao.com/search?keyword=流感出现混合感染+呼吸科专家提醒)
 1. [欧冠小组赛：曼城胜莱比锡](https://so.toutiao.com/search?keyword=欧冠小组赛：曼城胜莱比锡)
@@ -183,7 +196,6 @@
 1. [20天前被问责的财政局长要提拔了](https://so.toutiao.com/search?keyword=20天前被问责的财政局长要提拔了)
 1. [职校男生捅人 家属：系报复同学](https://so.toutiao.com/search?keyword=职校男生捅人+家属：系报复同学)
 1. [实探温州估值近4亿“烂尾”别墅群](https://so.toutiao.com/search?keyword=实探温州估值近4亿“烂尾”别墅群)
-1. [国内油价或出现五连跌](https://so.toutiao.com/search?keyword=国内油价或出现五连跌)
 1. [哈以双方开始第五轮被扣押人员交换](https://so.toutiao.com/search?keyword=哈以双方开始第五轮被扣押人员交换)
 1. [季中锦标赛1/4决赛对阵全部出炉](https://so.toutiao.com/search?keyword=季中锦标赛1/4决赛对阵全部出炉)
 1. [《潜行》刘德华演“冷静的疯批”](https://so.toutiao.com/search?keyword=《潜行》刘德华演“冷静的疯批”)
@@ -198,7 +210,6 @@
 1. [媒体：被AI换脸变声诈骗宣传片吓到](https://so.toutiao.com/search?keyword=媒体：被AI换脸变声诈骗宣传片吓到)
 1. [老人突发脑梗挂急诊院长狂奔救治](https://so.toutiao.com/search?keyword=老人突发脑梗挂急诊院长狂奔救治)
 1. [运动会上演军大衣队VS花棉袄队](https://so.toutiao.com/search?keyword=运动会上演军大衣队VS花棉袄队)
-1. [副县级领导干部刚提拔即被查](https://so.toutiao.com/search?keyword=副县级领导干部刚提拔即被查)
 1. [方媛说郭富城是抱娃高手](https://so.toutiao.com/search?keyword=方媛说郭富城是抱娃高手)
 1. [拼多多第三季度营收688.4亿元](https://so.toutiao.com/search?keyword=拼多多第三季度营收688.4亿元)
 1. [鹏翎股份：公司是长安汽车供应商](https://so.toutiao.com/search?keyword=鹏翎股份：公司是长安汽车供应商)
